- Added a General queue module Changed chatqueue buddy_queue and masmsg (invites) to use
- Added a new setting: tools connect_timeout to allow the get_site function timeout to be adjusted.
- Inspect has been added as an alias for Identify.
- The function debug_bt() as been added to Bot.php to allow for displaying a formatted backtrace to console. Returns a string.

API Changes:
- Moved aochat event handling out of Main.php and in to AOChat.php
- Added third optional parameter $header (bol TRUE/FALSE) to make_blob displaying VhaBot like terminal header. Shamelessly borrowed from VhaBot. Defaults to TRUE
- Added fourth optional parameter $strip (bol TRUE/FALSE) to chatcmd to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
- Added sixth optional parameter $strip (bol TRUE/FALSE) to make_item to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
- chatcmd() now allows / as $origin parameter and will not prefix the chatcmd in any way.
- Added this->bot->core("tools")->my_rand($min=false, $max=false) wrapper to call random number generator.
- Removed one optional parameter from get_site leaving the parameters now as: url, $strip_headers = FALSE, $read_timeout = FALSE.
  Only $url is a required parameter.
- AOChat now utilizes the Symfony Event Dispatcher for it's events.

New Modules:
- Added AdminsUI Module to allow members to easily see the admin list, which also shows alts and status

Removed Modules:
- ao/Team has been removed since the raid interface makes this obsolete.
- ao/Glyph has been removed as it no longer serves a purpose.
- ao/Tier2 has been removed as it no longer serves a purpose.

+Possible BREAKAGE! - Peliminary testing shows modules appear to be working as expected.
+- Moving from Status array to BotError. This WILL cause breakage until the checks have been converted aswell.