@@ -35,6 +35,7 @@ Version 0.7.0
 - Added a new setting: tools connect_timeout to allow the get_site function timeout to be adjusted.
 - Inspect has been added as an alias for Identify.
 - The function debug_bt() as been added to Bot.php to allow for displaying a formatted backtrace to console. Returns a string.
+- Multiple new settings to the Logon notice module. Now does not do external lookups by default for whois info nor display details or alts by default.
 
 API Changes:
 - Moved aochat event handling out of Main.php and in to AOChat.php
